# satin-blocks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UNIX_RULES.md  build.sh  dependencies.cmake  test.sh
cmake/: FindLibBitcoin.cmake
include/: version_autogen.h
include/compile/: compiler.hpp
include/eval/: engine.hpp
include/interpret/: interpret.hpp
include/lib/: error_codes.hpp  exit_codes.hpp  help.hpp
include/mylib/: feature.h  myfunc.hpp
include/myproject/: feature.h
include/run/: runtime.hpp
scripts/: build-debug.sh  build-libbitcoin.sh  build.sh  test.sh
src/: CMakeLists.txt  version_autogen.h  version_autogen.hpp
src/compile/: CMakeLists.txt  README.md  compiler.cpp  main.cpp
src/emacs/: README.md  satin-mode.el
src/emacs/dict/: satin-mode
src/eval/: CMakeLists.txt  engine.cpp  main.cpp
src/help/: CMakeLists.txt  README.md  main.cpp
src/interpret/: CMakeLists.txt  interpret.cpp  main.cpp
src/mylib/: CMakeLists.txt  myfunc.cpp
src/myproject/: CMakeLists.txt  feature.cpp  main.cpp
src/run/: CMakeLists.txt  README.md  main.cpp  runtime.cpp
src/satin/: CMakeLists.txt  README.md  satin.sh
src/shell/: CMakeLists.txt  README.md  satin-shell.sh
test/: all.sh  compile-tests.bats  eval-tests.bats  interpret-tests.bats  run-tests.bats
